# Jade

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  Dockerfile  Dockerfile.cli  Dockerfile.dev  Dockerfile.qemu  Dockerfile.qemu.dockerignore  FWUPDATE.md  J741  LICENSE  Makefile  README.md  REPRODUCIBLE.md  build_firmware_binaries.sh  ci_flash.sh  compjade.sh  dependencies.lock.esp32  dependencies.lock.esp32s3  dev_flash.sh  docker-compose.dev.yml  docker-compose.yml  flastdip.sh  format.sh  fwprep.py  generate_fw_upload.sh  jade-client-requirements.txt  jade-client-requirements.txt.asc  jade_attest.py  jade_auth.py  jade_bip85_rsa_sign.py  jade_capture_image_data.py  jade_cli.py  jade_ota.py  (+12 more)
components/assets/: CMakeLists.txt  README.txt  asset_data.json  asset_data_testnet.json  assets.c  assets.h  assets_snapshot.c  assets_snapshot.h  excluded_issuers.txt  excluded_issuers_testnet.txt  fetch_assets.sh  gen_assets.py
components/autogenlang/: CMakeLists.txt  gen_locale.py  jlocale.c  jlocale.h
components/libwally-core/: CMakeLists.txt  config.h  libsecp256k1-config.h
libjade/: CMakeLists.txt  README.md  coverage.sh  daemon.c  esp_camera.c  esp_event.c  gui.c  gui.py  icons.inc  libjade.c  libjade.h  make_icons.py  make_libjade.sh  miniz.c  miniz.h  nvs_flash.c  run_libjade_gui.sh  task.c
libjade/include/: esp_app_desc.h  esp_app_format.h  esp_camera.h  esp_chip_info.h  esp_crc.h  esp_err.h  esp_event.h  esp_heap_caps.h  esp_idf_version.h  esp_log.h  esp_mac.h  esp_ota_ops.h  esp_partition.h  esp_sleep.h  esp_system.h  jlocale.h  nvs.h  nvs_flash.h  sdkconfig.h
libjade/include/freertos/: FreeRTOS.h  projdefs.h  ringbuf.h  semphr.h  task.h  timecvt.h
libjade/include/sodium/: crypto_verify_32.h  crypto_verify_64.h  utils.h
main/: CMakeLists.txt  Kconfig.projbuild  aes.c  aes.h  amalgamated.c  assets.c  assets.h  bcur.c  bcur.h  button_events.h  camera.c  camera.h  descriptor.c  descriptor.h  display.c  display.h  display_hw.c  display_hw.h  gui.c  gui.h  identity.c  identity.h  idf_component.yml  idletimer.c  idletimer.h  input.c  input.h  jade_abort.c  jade_assert.h  jade_log.h  jade_tasks.h  jade_wally_verify.h  keychain.c  keychain.h  logging.c  main.c  multisig.c  multisig.h  network_type.h  otpauth.c  (+35 more)
main/attestation/: attestation.c  attestation.h
main/ble/: ble.c  ble.h
main/fonts/: BigFont.c  DefaultFont.c  DejaVuSans18.c  DejaVuSans24.c  Retro8x16.c  Sinclair_Inverted_M.c  Sinclair_Inverted_S.c  Sinclair_M.c  Sinclair_S.c  SmallFont.c  Ubuntu16.c  Various_Symbols_32x32.c  battery_24x48.c  comic24.c  def_small.c  jade_symbols_16x16.c  jade_symbols_16x32.c  jade_symbols_24x24.c  minya24.c  tooney32.c  various_symbols.c
main/input/: navbtns.inc  noinput.inc  selectbtn.inc  singlebtn.inc  tdeck.inc  touchscreen.inc  wheel.inc
main/power/: i2c.inc  ip5306.inc  jadev10.inc  jadev11.inc  jadev20.inc  m5stackcores3.inc  m5stickcplus.inc  m5stickcplus2.inc  minimal.inc  tdeck.inc  tdisplay.inc  tdisplays3.inc  twatchs3.inc  wsamoled164.inc  wslcdtouch2.inc
main/process/: auth_user.c  dashboard.c  debug_clean.c  debug_handshake.c  debug_scan_qr.c  debug_set_mnemonic.c  derive_child_key.cpp  get_bip85_bip39_entropy.c  get_bip85_entropy.c  get_bip85_pubkey.c  get_blinding_factor.c  get_blinding_key.c  get_commitments.c  get_identity_pubkey.c  get_identity_shared_key.c  get_master_blinding_key.c  get_otp_code.c  get_receive_address.c  get_registered_descriptor.c  get_registered_descriptors.c  get_registered_multisig.c  get_registered_multisigs.c  get_shared_nonce.c  get_xpubs.c  mnemonic.c  ota.c  ota.h  ota_defines.h  ota_delta.c  ota_util.c  ota_util.h  pin.c  pinclient.c  process_utils.c  process_utils.h  register_attestation.c  register_descriptor.c  register_multisig.c  register_otp.c  sign_attestation.c  (+9 more)
main/qemu/: README.md  display.html  docker_build.sh  docker_runner.sh  docker_test.sh  make-flash-img.sh  make_flash_img.sh  qemu_ci_flash.sh  qemu_display.c  qemu_display.h  qemu_gdb.sh  qemu_reboot.sh  qemu_run.sh  qemu_tcp.c  qemu_tcp.h  run_emulator.sh
main/ui/: ble_confirm.c  camera.c  confirm_address.c  dashboard.c  descriptor.c  dialogs.c  digit_entry.c  keyboard.c  mnemonic.c  multisig.c  ota.c  otpauth.c  pin.c  qrmode.c  select_registered_wallet.c  sign_identity.c  sign_message.c  sign_tx.c  sign_tx.h  signer.c  update_pinserver.c
main/usbhmsc/: usbhmsc.c  usbhmsc.h  usbmode.c  usbmode.h
main/utils/: address.c  address.h  cbor_rpc.c  cbor_rpc.h  event.c  event.h  malloc_ext.h  network.c  network.h  psbt.c  psbt.h  shake256.c  shake256.h  temporary_stack.c  temporary_stack.h  urldecode.c  urldecode.h  util.c  util.h  wally_ext.c  wally_ext.h
tools/bip85_rsa_key_gen/: CMakeLists.txt  README.md  main.c  test.sh
tools/bip85_rsa_key_gen/test_vectors/: key_--mnemonic_0_1024.txt  key_--mnemonic_0_1024_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_0_2048.txt  key_--mnemonic_0_2048_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_0_3072.txt  key_--mnemonic_0_3072_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_0_4096.txt  key_--mnemonic_0_4096_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_1_1024.txt  key_--mnemonic_1_1024_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_1_2048.txt  key_--mnemonic_1_2048_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_1_3072.txt  key_--mnemonic_1_3072_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_1_4096.txt  key_--mnemonic_1_4096_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_2_1024.txt  key_--mnemonic_2_1024_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_2_2048.txt  key_--mnemonic_2_2048_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_2_3072.txt  key_--mnemonic_2_3072_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_2_4096.txt  key_--mnemonic_2_4096_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_3_1024.txt  key_--mnemonic_3_1024_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_3_2048.txt  key_--mnemonic_3_2048_passphrase_bip85_rsa_key_gen.txt  key_--mnemonic_3_3072.txt  key_--mnemonic_3_4096.txt  key_--xpriv_0_1024.txt  (+17 more)
(+627 files in other folders)
